--- a/style.css
+++ b/style.css
@@ -213,3 +213,50 @@ footer{
     color: #333;
 	text-decoration: none;
 }
+
+
+
+@media only screen and (max-width: 46.1875em){
+    .slideshow-container{
+        width: 75%;
+    }
+    .image2{
+        max-width: 350px;
+        height: 350px;
+    }
+    .hidden-table{
+        font-size: small;
+    }
+    .csw-btn-button{
+    width: 100px;
+    height: 50px;
+    font-size: small;
+    }
+    .image5{
+        max-width: 350px;
+        height: 350px;
+    }
+    
+}
+
+@media only screen and (min-width: 46.25em) and (max-width: 63.9375){
+  .slideshow-container{
+    width: 75%;
+  }
+  .image2{
+    max-width: 350px;
+    height: 350px;
+    }
+    .hidden-table{
+        font-size: small;
+    }
+    .image5{
+        max-width: 350px;
+        height: 350px;
+    }
+    .csw-btn-button3{
+        width: 50px;
+        height: 50px;
+        font-size: small;
+    }
+}
