--- a/style2.css
+++ b/style2.css
@@ -1,192 +1,147 @@
-body{
-  background-color: whitesmoke;
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap');
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Poppins', sans-serif;
 }
-header {
+body{
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: white;
-  }
-  .search {
+    min-height: 100vh;
+    background: #000;
+}
+.wrapper{
+    position: relative;
     display: flex;
+    justify-content: center;
     align-items: center;
-    padding: 10px;
-    border: 1px solid #ccc;
-    box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.3);
-    border-radius: 20px;
-  }
-  
-  .search input[type="text"] {
-    border: none;
-    font-size: 18px;
-    margin-right: 10px;
-    width: 450px;
-  }
-  
-  .search button {
-    background-color: #0C713D;
-    color: white;
-    border: none;
-    padding: 10px 20px;
+    width: 600px;
+    height: 1100px;
+    background: transparent;
+    border: 5px solid #333;
+    border-radius: 10px;
+    transition: .5s;
+}
+.wrapper:hover{
+    border: 5px solid #05ff7e;
+    box-shadow: 0 0 20px #05ff7e, inset 0 0 20px #05ff7e;
+}
+h2{
+    font-size: 2em;
     text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 18px;
-    border-radius: 20px;
-    cursor: pointer;
-  }
-ul {
-  display: flex;
-  text-align: center;
-	margin: 0;
-	padding: 0;
-	list-style: none;
+    color: #fff;
+    transition: .5s;
 }
-li a {
-  font-size: large;
-	color: #333;
-	text-decoration: none;
+.wrapper:hover h2{
+    color: #05ff7e;
 }
-.image1{
-  height: auto;
-  width: 100px;
+.input-box{
+    position: relative;
+    width: 500px;
+    margin: 30px 0;
 }
-.nhap1{
-  width: 200px;
-  height: 20px;
-  margin-bottom: 10px;
-  border-radius: 5px;
-  margin-left: 20px;
-}
-.container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 650px;
-}
-.square {
-  width: 900px;
-  height: 600px;
-  background-color: white;
-  position: relative;
-}
-.square h2 {
-  padding-left: 2em;
-}
-.container1 {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 150px;
-}
-.square1 {
-  width: 900px;
-  height: 150px;
-  background-color: white;
-  position: relative;
-}
-.square1 h2 {
-  padding-left: 2em;
-}
-.square1 h4 {
-  padding-left: 2em;
-}
-.nhap2{
-  display: flex;
-    padding-left: 2em;
-    text-align: left;
-    font-family: sans-serif;
-}
-.nhap2 input{
-    width: 350px;
-    height: 40px;
-    margin-bottom: 10px;
+.input-box input{
+    width: 100%;
+    height: 50px;
+    background: transparent;
+    border: 2px solid #333;
+    outline: none;
     border-radius: 5px;
-    margin-left: 20px;
+    font-size: 1em;
+    color: #fff;
+    padding: 0 10px 0 35px;
+    transition: .5s;
 }
-label {
-  display: block;
-  margin-bottom: 10px;
-}
-select {
-  height: 40px;
-  width: 356px;
-  padding: 5px;
-  border: 1px solid black;
-  border-radius: 4px;
-  font-size: 16px;
-  color: black;
-  background-color: #fff;
-}
-#nhap1{
-  font-size: large;
-  padding-left: 2em;
-}
-footer {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background-color: white;
-}
-.search1 {
-  display: flex;
-  align-items: center;
-  padding: 10px;
-  border: 1px solid #ccc;
-  box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.3);
-  border-radius: 20px;
+.wrapper:hover .input-box input{
+    border: 2px solid #05ff7e;
+    box-shadow: 0 0 10px #05ff7e, inset 0 0 10px #05ff7e;
 }
 
-.search1 input[type="text"] {
-  border: none;
-  font-size: 14px;
-  margin-right: 10px;
-  width: 200px;
+.input-box input::placeholder{
+    color: rgba(255, 255, 255, .3);
+}
+.input-box .icon{
+    position: absolute;
+    left: 10px;
+    color: #fff;
+    font-size: 1.2em;
+    line-height: 55px;
+    transition: .5s;
+
+}
+.wrapper:hover .input-box .icon{
+    color: #05ff7e;
 }
 
-.search1 button {
-  background-color: blue;
-  color: white;
-  border: none;
-  padding: 10px 20px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  font-size: 14px;
-  border-radius: 20px;
-  cursor: pointer;
+.forgot-pass{
+    margin: -15px 0 15px;
 }
-.nhap3{
-  display: flex;
-    padding-left: 2em;
-    font-family: sans-serif;
+.forgot-pass a{
+    color: #fff;
+    font-size: .9em;
+    text-decoration: none;
 }
-a {
-  font-size: large;
-	color: #333;
-	text-decoration: none;
+.forgot-pass a:hover{
+    text-decoration: underline;
 }
-.csw-btn-button{
-  font-family: sans-serif;
-  width: 200px;
-  height: 40px;
-  margin-bottom: 10px;
-  border-radius: 5px;
-  margin-left: 850px;
-  border: none;
-  color: white;
-  background-color: darkred;
+button{
+    position: relative;
+    width: 100%;
+    height: 45px;
+    background: #333;
+    border: none;
+    outline: none;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 1em;
+    color: #fff;
+    font-weight: 500;
+    transition: .5s;
 }
-.csw-btn-button:hover{
-  font-family: sans-serif;
-  font-size: 20px;
-  color: white;
+.wrapper:hover button{
+    background-color: #05ff7e;
+    color: #000;
+    box-shadow: 0 0 10px #05ff7e;
 }
-.end{
-  display: flex;
+.register-link{
+    font-size: .9em;
+    text-align: center;
+    margin: 25px 0;
+}
+.register-link p{
+    color: #fff;
+}
+.register-link p a {
+    color: #333;
+    text-decoration: none;
+    font-weight: 600;
+    transition: .5s;
+}
+.wrapper:hover .register-link p a{
+    color: #05ff7e;
+}
+.register-link p a :hover{
+    text-decoration: underline;
 }
 
-.image2{
-  height: auto;
-  width: 50px;
+@media only screen and (max-width: 46.1875em){
+    .wrapper{
+        width: 350px;
+        height: 1100px;
+    }
+    .input-box{
+        width: 300px;
+    }
+}
+
+@media only screen and (min-width: 46.25em) and (max-width: 63.9375){
+    .wrapper{
+        width: 450px;
+        height: 1100px;
+    }   
+    .input-box{
+        width: 400px;
+    }
 }
