--- a/style2.css
+++ b/style2.css
@@ -5,6 +5,27 @@
     box-sizing: border-box;
     font-family: 'Poppins', sans-serif;
 }
+.loading{
+    width: 100%;
+    height: 100%;
+    background: #000;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 100000000;
+    display: block;
+    overflow: hidden;
+    opacity: 0.8; /*mờ màn hình*/
+}
+.loading img{
+    width: 150px;
+    height: 150px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    margin-top: -75px;
+    margin-left: -75px;
+}
 body{
     display: flex;
     justify-content: center;
