--- a/style.css
+++ b/style.css
@@ -225,7 +225,7 @@ footer{
         height: 350px;
     }
     .hidden-table{
-        font-size: small;
+        font-size: medium;
         width: 50%;
     }
     .csw-btn-button{
@@ -237,7 +237,11 @@ footer{
         max-width: 350px;
         height: 350px;
     }
-    
+    .csw-btn-button3{
+        width: 50px;
+        height: 50px;
+        font-size: small;
+    }
 }
 
 @media only screen and (min-width: 46.25em) and (max-width: 63.9375){
@@ -259,6 +263,6 @@ footer{
     .csw-btn-button3{
         width: 50px;
         height: 50px;
-        font-size: small;
+        font-size: medium;
     }
 }
