--- a/style.css
+++ b/style.css
@@ -266,3 +266,24 @@ footer{
         font-size: medium;
     }
 }
+.loading{
+    width: 100%;
+    height: 100%;
+    background: white;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 100000000;
+    display: block;
+    overflow: hidden;
+    opacity: 0.95;
+}
+.loading img{
+    width: 250px;
+    height: 150px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    margin-top: -75px;
+    margin-left: -75px;
+}
