--- a/style3.css
+++ b/style3.css
@@ -231,3 +231,35 @@ table{
     font-size: medium;
   }
 }
+.ReturnPage p{
+  color: black;
+	text-decoration: none;
+  text-align: center;
+  font-size: large;
+}
+.ReturnPage p a{
+  color: grey;
+	text-decoration: none;
+  text-align: center;
+}
+.loading{
+  width: 100%;
+  height: 100%;
+  background: white;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 100000000;
+  display: block;
+  overflow: hidden;
+  opacity: 0.9; /*mờ màn hình*/
+}
+.loading img{
+  width: 150px;
+  height: 150px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  margin-top: -75px;
+  margin-left: -75px;
+}
