--- a/style4.css
+++ b/style4.css
@@ -125,3 +125,23 @@ button{
 .register-link p a :hover{
     text-decoration: underline;
 }
+.loading{
+    width: 100%;
+    height: 100%;
+    background: white;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 100000000;
+    display: block;
+    overflow: hidden; /*mờ màn hình*/
+  }
+  .loading img{
+    width: 150px;
+    height: 150px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    margin-top: -75px;
+    margin-left: -75px;
+  }
