--- a/style6.css
+++ b/style6.css
@@ -501,6 +501,10 @@ a:focus {
   background-color: #222831;
   color: #ffffff;
 }
+.food_section .filters_menu li.active a{
+  background-color: #222831;
+  color: #ffffff;
+}
 
 .food_section .box {
   position: relative;
@@ -1140,4 +1144,43 @@ cursor: pointer;
   width: 70%;
   font-size: medium;
 }
+}
+
+.loading{
+  width: 100%;
+  height: 100%;
+  background: white;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 100000000;
+  display: block;
+  overflow: hidden; /*mờ màn hình*/
+}
+.loading img{
+  width: 150px;
+  height: 150px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  margin-top: -75px;
+  margin-left: -75px;
+}
+
+.ReturnPage p{
+  color: black;
+	text-decoration: none;
+  text-align: center;
+}
+.ReturnPage p a{
+  color: grey;
+	text-decoration: none;
+  text-align: center;
+}
+
+.detail-box h5 a{
+  color: white;
+}
+.detail-box h5 a:hover{
+  color: yellow;
 }
