--- a/bootstrap.css
+++ b/bootstrap.css
@@ -264,7 +264,7 @@ button,
 [type="button"],
 [type="reset"],
 [type="submit"] {
-  -webkit-appearance: button;
+  --webkit-appearance: button;
 }
 
 button:not(:disabled),
@@ -292,7 +292,7 @@ input[type="date"],
 input[type="time"],
 input[type="datetime-local"],
 input[type="month"] {
-  -webkit-appearance: listbox;
+  --webkit-appearance: listbox;
 }
 
 textarea {
@@ -330,7 +330,7 @@ progress {
 
 [type="search"] {
   outline-offset: -2px;
-  -webkit-appearance: none;
+  --webkit-appearance: none;
 }
 
 [type="search"]::-webkit-search-decoration {
